@@ -21,6 +21,8 @@ TODO: perl-shell-window? perl-unix-socket?
 TODO: command line editing when icanon?
 TODO: split ROW into a ROW_fast (0..total*2-1) and ROW macros?
 
+	- fix "new pagemap" vs. "delete pagemap" mismatch ([] vs. non-[]),
+          as diagnosed by clang.
 	- fix height mismatch between active and inactive cursor when
 	  lineSpace is non zero (patch by Stanislav Seletskiy).
 
